<resources>
    <string name="app_name">Decorum</string>
    <string name="username_hint">Username</string>
    <string name="password">Password</string>
    <string name="new_Account">NEW ACCOUNT</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_living_room">Design</string>
    <string name="kitchen_title">Your Ideal Kitchen</string>
    <string name="office">Home Office</string>
    <string name="relax_room">Bedroom</string>
    <string name="discover_text">Your Sitting Room Perfectly</string>
    <string name="kitchen_text">Get every kitchen need set up </string>
    <string name="office_text">Customized and Nicely set up</string>
    <string name="rewards_text">Start Now</string>
    <string name="get_started">Get Started</string>
    <string name="bedroom">Bedroom</string>
    <string name="login">Login</string>
    <string name="no_account">Dont have an account? <b>Sign Up</b></string>
</resources>
