<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.GettingStartedActivity">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/home_deco" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="160dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@id/image"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/rectangular"
                    android:hint="@string/username_hint" />

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular"
                    android:inputType="textPersonName"
                    android:hint="@string/password" />

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_below="@+id/login_layout"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/socialMediaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvForgotPass"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/fbLogin"
            android:layout_width="50dp"
            android:layout_marginTop="5dp"
            android:layout_height="50dp"
            android:background="@drawable/facebook"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:layout_width="50dp"
            android:layout_marginTop="5dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/gmail"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSignup"
        android:layout_below="@+id/socialMediaLogin"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:text="@string/no_account"
        android:layout_height="wrap_content"/>
</RelativeLayout>